// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Flex Default 1`] = `
<div
  class="flex flex-wrap -ml-2 -mt-2"
>
  <div
    class="w-1/3 pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        1

    </div>
  </div>

  <div
    class="w-1/3 pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        2

    </div>
  </div>

  <div
    class="w-1/3 pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        3

    </div>
  </div>

  <div
    class="md:w-2/3 w-full pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        4

    </div>
  </div>

  <div
    class="md:w-1/3 w-full pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        5

    </div>
  </div>

  <div
    class="sm:w-1/3 lg:w-1/2 w-full pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        6

    </div>
  </div>

  <div
    class="sm:w-1/3 lg:w-1/2 w-full pl-2 pt-2"
  >
    <div
      class="bg-gray-200 p-2"
    >

        7

    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Flex Different Gap By Axis 1`] = `
<div
  class="flex flex-wrap -ml-3 -mt-6"
>
  <div
    class="w-1/3 pl-3 pt-6"
  >
    <div
      class="bg-gray-200 p-2"
    >

        1

    </div>
  </div>

  <div
    class="w-1/3 pl-3 pt-6"
  >
    <div
      class="bg-gray-200 p-2"
    >

        2

    </div>
  </div>

  <div
    class="w-1/3 pl-3 pt-6"
  >
    <div
      class="bg-gray-200 p-2"
    >

        3

    </div>
  </div>

  <div
    class="md:w-2/3 lg:w-1/2 w-full pl-3 pt-6"
  >
    <div
      class="bg-gray-200 p-2"
    >

        4

    </div>
  </div>

  <div
    class="md:w-1/3 lg:w-1/2 w-full pl-3 pt-6"
  >
    <div
      class="bg-gray-200 p-2"
    >

        5

    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Flex No Gap 1`] = `
<div
  class="flex flex-wrap"
>
  <div
    class="w-1/2 lg:w-1/4"
  >
    <div
      class="bg-gray-200 p-2"
    >

        1

    </div>
  </div>

  <div
    class="w-1/2 lg:w-1/4"
  >
    <div
      class="bg-gray-200 p-2"
    >

        2

    </div>
  </div>

  <div
    class="w-1/2 lg:w-1/4"
  >
    <div
      class="bg-gray-200 p-2"
    >

        3

    </div>
  </div>

  <div
    class="w-1/2 lg:w-1/4"
  >
    <div
      class="bg-gray-200 p-2"
    >

        4

    </div>
  </div>

  <div
    class="w-1/2 lg:w-1/4"
  >
    <div
      class="bg-gray-200 p-2"
    >

        5

    </div>
  </div>

  <div
    class="w-1/2 lg:w-1/4"
  >
    <div
      class="bg-gray-200 p-2"
    >

        6

    </div>
  </div>
</div>
`;
